# nbconvert-template-example

./: .gitignore  Example Notebook.ipynb  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
avocado/: __init__.py
avocado/avocado/: avocado.css  conf.json
fruit_styles/: __init__.py
fruit_styles/avocado/: index.html.j2
tests/: test_export.py
