[metadata]
name = nbconvert-example-template
version = 0.1
author = Samuel Sheehy
author_email = samuelsheeh95@gmail.com
description = A minimal and pip-installable nbconvert template example.
long_description = file: README.md, file: LICENSE
long_description_content_type = text/markdown
url = https://github.com/sheeshee/nbconvert-template-example
license = MIT
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = fruit_styles
python_requires = >=3.7
install_requires =
    jupyter
    nbconvert >=6.0
include_package_data = True

[options.entry_points]
nbconvert.exporters =
    avocadify = fruit_styles:AvocadoExporter
